# WocOfCpp

./: README.md
AdvancedPart/snake/: .gitignore  CMakeLists.txt  Main.qml  snake.qml
AdvancedPart/snake/snake/: CMakeLists.txt  Main.qml
AdvancedPart/snake/snake/Assets/: Hoolheyak-Interact-x1-left.webm  Hoolheyak-Interact-x1-right.webm  Hoolheyak-Move-x1-right.webm  Hoolheyak-Move-x1left.webm  Hoolheyak-Relax-x1-left.webm  Hoolheyak-Relax-x1-right.webm  Hoolheyak-Sit-x1-left.webm  Hoolheyak-Sit-x1-right.webm  Hoolheyak-Sleep-x1-left.webm  Hoolheyak-Sleep-x1-right.webm  Hoolheyak-Special-x1-left.webm
ElementaryPart/: CMakeLists.txt  CMakePresets.json  JsonExpression.cpp
ElementaryPart/counter/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
ElementaryPart/counter/Calculators/: Calculators.h  CommenCalculator.cpp  FoldFunctionCalls.cpp  FunCalculator.cpp  VarCalculator.cpp
ElementaryPart/counter/Errors/: Error.cpp  Errors.h
ElementaryPart/counter/Parses/: InputParse.cpp  Parses.h  TypeParse.cpp
ElementaryPart/counter/Reader/: InputReader.cpp  Reader.h
ElementaryPart/counter/Tokens/: Token.cpp  Tokens.h
